# reading-and-annotate-docker-17.05.0

./: README.md  test.sh
containerd/: 参考.txt
containerd/api/grpc/server/: server.go
containerd/api/grpc/types/: api.pb.go
containerd/containerd/: main.go
containerd/containerd-shim/: console.go  console_solaris.go  main.go  process.go  process_linux.go
containerd/integration-test/: check_test.go
containerd/osutils/: prctl.go
containerd/runtime/: container.go  process.go  process_linux.go  runtime.go
containerd/specs/: spec_linux.go
containerd/supervisor/: create.go  delete.go  exit.go  machine.go  metrics.go  monitor_linux.go  signal.go  supervisor.go  task.go  worker.go
docker/moby-17.05.0-ce/: 1q  docker相关.txt  版本说明.txt
docker/moby-17.05.0-ce/api/: common.go
docker/moby-17.05.0-ce/api/server/: middleware.go  router_swapper.go  server.go
docker/moby-17.05.0-ce/api/types/: auth.go  configs.go  types.go
docker/moby-17.05.0-ce/cli/command/: cli.go
docker/moby-17.05.0-ce/cli/flags/: common.go
docker/moby-17.05.0-ce/client/: image_create.go  image_pull.go  interface.go  lxcfs_info.go
docker/moby-17.05.0-ce/cmd/docker/: docker.go
docker/moby-17.05.0-ce/cmd/dockerd/: config.go  config_unix.go  daemon.go  daemon_linux.go  daemon_solaris.go  daemon_unix.go  daemon_windows.go  docker.go  service_windows.go
docker/moby-17.05.0-ce/container/: container.go  container_unix.go  container_windows.go  env.go
docker/moby-17.05.0-ce/daemon/: 111.pcap  a.out  container.go  container_operations.go  container_operations_unix.go  create.go  create_unix.go  daemon.go  daemon_linux.go  daemon_unix.go  daemon_windows.go  debugtrap_unix.go  events.go  exec.go  health.go  image.go  image_pull.go  info.go  inspect.go  kill.go  lxcfs_info.go  monitor.go  names.go  oci_linux.go  reload.go  start.go  stop.go  volumes.go  volumes_unix.go
docker/moby-17.05.0-ce/daemon/cluster/: cluster.go
docker/moby-17.05.0-ce/daemon/config/: config.go  config_common_unix.go  config_unix.go
docker/moby-17.05.0-ce/daemon/events/: events.go
docker/moby-17.05.0-ce/daemon/graphdriver/: driver.go  driver_linux.go  fsdiff.go
docker/moby-17.05.0-ce/daemon/initlayer/: setup_unix.go
docker/moby-17.05.0-ce/distribution/: config.go  pull.go  pull_v1.go  pull_v2.go  push_v2.go  registry.go
docker/moby-17.05.0-ce/distribution/metadata/: metadata.go  v1_id_service.go  v2_metadata_service.go
docker/moby-17.05.0-ce/distribution/utils/: progress.go
docker/moby-17.05.0-ce/distribution/xfer/: download.go  transfer.go  upload.go
docker/moby-17.05.0-ce/hack/: make.sh
docker/moby-17.05.0-ce/hack/dockerfile/: install-binaries.sh
docker/moby-17.05.0-ce/image/: fs.go  image.go  rootfs.go  store.go
docker/moby-17.05.0-ce/integration-cli/: docker_cli_build_test.go  docker_cli_run_test.go  docker_experimental_network_test.go
docker/moby-17.05.0-ce/layer/: filestore.go  layer.go  layer_store.go  mounted_layer.go  ro_layer.go
docker/moby-17.05.0-ce/libcontainerd/: c  cafdaf  client.go  client_linux.go  client_unix.go  container.go  container_unix.go  container_windows.go  lxcfs_remote_unix.go  oom_linux.go  process.go  process_unix.go  remote.go  remote_unix.go  types.go
docker/moby-17.05.0-ce/migrate/v1/: migratev1.go
docker/moby-17.05.0-ce/oci/: defaults_windows.go
docker/moby-17.05.0-ce/opts/: opts.go
docker/moby-17.05.0-ce/pkg/devicemapper/: devmapper.go  devmapper_wrapper.go  devmapper_wrapper_deferred_remove.go
docker/moby-17.05.0-ce/pkg/idtools/: idtools.go
docker/moby-17.05.0-ce/plugin/: blobstore.go  manager.go
docker/moby-17.05.0-ce/procps-v3.3.3/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  a.out  autogen.sh  configure.ac  free.1  free.c  kill.1  mytop.cpp  mytop2  pgrep.1  pgrep.c  pmap.1  pmap.c  pwdx.1  pwdx.c  skill.1  skill.c  slabtop.1  slabtop.c  sysctl.8  sysctl.c  sysctl.conf  sysctl.conf.5  test.sh  tload.1  tload.c  uptime.1  uptime.c  vmstat.8  vmstat.c  w.1  w.c  watch.1  watch.c
docker/moby-17.05.0-ce/procps-v3.3.3/Documentation/: CodingStyle  FAQ  TODO  howto-uClibc-buildroot-compilation.txt
docker/moby-17.05.0-ce/procps-v3.3.3/contrib/: dummy.c  minimal.c  response.filtered-with-patches.err  tmp-junk.c  utmp.c
docker/moby-17.05.0-ce/procps-v3.3.3/include/: Makefile.am  c.h  nls.h  strutils.h  xalloc.h
docker/moby-17.05.0-ce/procps-v3.3.3/lib/: .gitignore  Makefile.am  fileutils.c  strutils.c
docker/moby-17.05.0-ce/procps-v3.3.3/po/: .gitignore  update-potfiles
docker/moby-17.05.0-ce/procps-v3.3.3/proc/: readproc.c  readproc.h  version.c  whattime.c
docker/moby-17.05.0-ce/procps-v3.3.3/ps/: Makefile.am  common.h  display.c  global.c  help.c  output.c  parser.c  ps.1  select.c  sortformat.c  stacktrace.c
docker/moby-17.05.0-ce/procps-v3.3.3/testsuite/: .gitignore  Makefile.am
docker/moby-17.05.0-ce/procps-v3.3.3/testsuite/config/: unix.exp
docker/moby-17.05.0-ce/procps-v3.3.3/top/: Makefile.am  top.1  top.c  top.h  top_nls.c  top_nls.h
docker/moby-17.05.0-ce/reference/: store.go  store_test.go
docker/moby-17.05.0-ce/registry/: auth.go  config.go  service.go  service_v1.go  service_v2.go  types.go
docker/moby-17.05.0-ce/runconfig/: config.go  config_unix.go  hostconfig.go
docker/moby-17.05.0-ce/volume/: volume_propagation_linux_test.go
docker/moby-17.05.0-ce/网页参考/: 走进docker(01)：hello-world的背后发生了什么？ - 个人文章 - SegmentFault.html  走进docker(02)：image(镜像)是什么？ - 个人文章 - SegmentFault.html  走进docker(03)：如何绕过docker运行hello-world？ - 个人文章 - SegmentFault.html  走进docker(04)：什么是容器的runtime_ - 个人文章 - SegmentFault.html  走进docker(05)：docker在本地如何管理image（镜像）_ - 个人文章 - SegmentFault.html
opencontainers/runc/: checkpoint.go  create.go  exec.go  main.go  main_unix.go  run.go  signals.go  utils.go  utils_linux.go  参考
opencontainers/runc/libcontainer/: console.go  console_freebsd.go  console_linux.go  console_solaris.go  container.go  container_linux.go  factory.go  factory_linux.go  generic_error.go  init_linux.go  network_linux.go  process.go  process_linux.go  rootfs_linux.go  setns_init_linux.go  standard_init_linux.go  state_linux.go
(+139 files in other folders)
